@@ -2,6 +2,9 @@ Revision history for Perl extension AnyEvent.
 
 TODO: docs signal for condvar
 
+	- postpone differently in AnyEvent::Socket now, as
+          when not, canceling the connection attempt might fail
+          (found by Felix Antonius Wilhelm Ostmann).
 	- explicitly check for non-stream sockets in AE::Handle, too many
           clueless people fell into the trap of this somehow working.
 	- simplified and reworked the "OTHER MODULES" section.
